[package]
name = "async-winit-mit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
pollster = "0.3.0"
winit = "0.28.6"
